# Demidov-CS-Labs-2025

./: CMakeLists.txt  README.md  example.out  main.cpp  planet.txt  run.out  ticket.txt
Fraction/: CMakeLists.txt  Fraction.cpp  Fraction.h
MyStack/: CMakeLists.txt  MyStack.cpp  MyStack.h
Planet/: CMakeLists.txt  Planet.cpp  Planet.h
Ticket/: CMakeLists.txt  Ticket.cpp  Ticket.h
lab_1/: CMakeLists.txt  main.cpp  run.out
lab_1/mymath/mymath/: Makefile
lab_1/mymath_2/: CMakeLists.txt  mymath_2.cpp  mymath_2.h
lab_3/: CMakeLists.txt  main.cpp
mymath/: CMakeCache.txt  Makefile  cmake_install.cmake
mymath/mymath/: cmake_install.cmake
